# Rubick_sCubeSolver

./: 1dRcube.cpp  3dRcube.cpp  BFSsolver.h  CMakeLists.txt  CornerDBMaker.cpp  CornerDBMaker.h  CornerPatternDatabase.cpp  CornerPatternDatabase.h  DFSsolver.h  GenericRcube.cpp  GenericRcube.h  IDAstarSolver.h  IDDFSSsolver.h  NibbleArray.cpp  NibbleArray.h  Patterndatabase.cpp  Patterndatabase.h  PermutationIndexer.cpp  PermutationIndexer.h  bitRcube.cpp  bitRcube.h  main.cpp  math.cpp  math.h
